# socialsac

./: Convert_JSON.py  EmergencyServicesCit.json  FindUsSacramentoFood.json  HomelessWebTool.py  LICENSE  Orchestrator.py  README.md  SacramentoCalifornia.json  WebScraper.py  pyproject.toml
dashboard/: pyproject.toml
dashboard/app/: admin.py  models.py  views.py
dashboard/app/management/commands/: __init__.py  connector.py
dashboard/app/migrations/: 0001_initial.py  0002_auto_20210220_2349.py  0003_auto_20210221_0348.py  0004_auto_20210221_0416.py  0005_auto_20210221_0950.py  0006_auto_20210221_1041.py  0007_auto_20210221_1042.py
dashboard/core/: settings.py  urls.py
dashboard/core/static/ingest/: food_FindUsSac.json  shelter_ESC.json  shelter_SAC.json
dashboard/core/templates/: index.html
dashboard/core/templates/includes/: footer.html  navigation.html  scripts.html  sidebar.html
dashboard/core/templates/layouts/: base.html
helpers/: Convert_JSON.py  WebScraper.py
