[tool.poetry]
name = "socialsac"
version = "0.1.0"
description = "project submission for SacHacks 2021 - a dashboard visualization web app that aggregates useful information for houseless folks with a focus on cold-weather needs"
authors = ["drew <droo@hey.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
urllib3 = "^1.26.3"
asgiref = "^3.3.1"
autopep8 = "^1.5.5"
Django = "^3.1.7"
Unipath = "^1.1"
dj-database-url = "^0.5.0"
python-decouple = "^3.4"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
django-google-maps = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
